2007-02-12  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/FactoryInitServlet.java: store exception
	and factory name of factory which caused initialization failure as
	the newly introduced FactoryInitException
	* src/de/schlund/pfixxml/ServletManager.java: check if factories
	are initialized before calling process() in callProcess() and
	throw exception if not
	* src/de/schlund/pfixxml/FactoryInitException.java: added specialized
	exception for factory initialization erros, keeping the factory name
	and the causing Throwable

2007-02-09  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* projects/core/schema/scriptedflow200602.xsd: 
	* projects/sample1/conf/scriptedflow/forceadult.script.xml: 
	* projects/sample1/conf/scriptedflow/ordershirt.script.xml: 
	Added XML Schema for scripted flows.

2007-02-09  Martin Leidig  <mleidig@schlund.de>

	* build.xml: Added new target srcjar, which builds a jar file
	containing the Java sources needed for debugging. The target
	is automatically executed when calling ant dist and creates an
	according pfixcore-src-{version].jar file in the dist directory

2007-02-08  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/util/UnpackModuleTask.java: 
	* projects/core/schema/moduledescriptor200702.xsd: 
	* skel/build-skel.xml: 
	Adding support for resource data in JAR libraries. The resource data will
	be copied to the projects/modules/<module-x> directory if a suitable
	deployment descriptor is present in the JAR archive.

2007-02-08  Martin Leidig  <mleidig@schlund.de>

	* build.xml: Removed exclusion of the de.skelexamples package
	from compiling (it just confuses Eclipse, which sometimes doesn't
	compile the classes and shows errors). Added exclusion of the
	packages de.schlund.pfixcore.example and de.skelexamples to the
	jar file creation target (cause they're not needed/wanted here)

2007-02-08  Martin Leidig  <mleidig@schlund.de>
